Adjusts on roles

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,9 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-typeahead": "^2.7.6",
+    "typeahead.js": "^0.11.1",
+    "bootstrap3-typeahead": "^4.0.2"
   }
 }
