--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.7.1",
     "querystring": "~0.2.0",
-    "cookie-parser": "^1.4.3"
+    "cookie-parser": "^1.4.3",
+    "moment": "^2.17.1",
+    "bcrypt": "^1.0.2"
   },
   "repository": {
     "type": "git",
