--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "2.4.1",
     "express": "4.13.3",
     "express-handlebars": "^3.0.0",
     "jsonwebtoken": "^5.5.4",
+    "moment": "^2.17.1",
     "mongoose": "^4.7.1",
     "querystring": "~0.2.0",
-    "cookie-parser": "^1.4.3",
-    "moment": "^2.17.1",
-    "bcrypt": "^1.0.2"
+    "underscore": "^1.8.3"
   },
   "repository": {
     "type": "git",
