--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
-    "ejs": "2.4.1",
+    "ejs": "^2.4.1",
     "express": "4.13.3",
+    "express-ejs-layouts": "^2.2.0",
     "express-handlebars": "^3.0.0",
     "jsonwebtoken": "^5.5.4",
     "moment": "^2.17.1",
